fix(table): disabled pagination overlapping context-menu
change isolation property in gux-table to z-index to ensure gux-table
stays in same stacking context

✅ Closes: COMUI-2951

--- a/packages/genesys-spark-components/src/components/stable/gux-table/gux-table.scss
+++ b/packages/genesys-spark-components/src/components/stable/gux-table/gux-table.scss
@@ -1,8 +1,9 @@
 @use '~genesys-spark/src/style/typography.scss';
 
 :host {
+  position: relative;
+  z-index: var(--gse-semantic-zIndex-sticky);
   display: block;
-  isolation: isolate;
 
   .gux-table {
     position: relative;
